[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Matthew Kobilas <mattkobi789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
# shorthand for ^0.5.5, meaning "any version that has public API compatible w version 0.5.5"
# Rust will use dependencies found in Cargo.lock if it exists, regardless of what is in this file
    # to actually update, use cargo update